# nixos

./: arion-open-notebook.nix  build-iso.sh  config-darwin.nix  config.nix  constants.nix  desktop.nix  desktop_vars.nix  disko-config.nix  disko-hetzner.nix  disko-raid1.nix  distrobox-config.nix  distrobox.nix  flake.nix  hardware-configuration.nix  home.nix  iso.sh  khoj.nix  llm.nix  machine-config.nix  machine.nix  mcp-servers.nix  myimage.nix  network-local.nix  network.nix  networking.nix  nvidia.nix  per_machine_vars.nix  plasma.nix  podman-autobuilder.nix  pyproject.toml  restore.sh  restore_dots.sh  server.nix  server_vars.nix  sillytavern.nix  upgrade.sh  uv.lock.backup  uv_python.nix  vend.nix  vm.nix  (+2 more)
android/: grapheneos.nix  lineageos.nix
containers/fedora-pytorch-vulkan/: Dockerfile  requirements-additional.txt  requirements.txt
containers/fedora-vulkan/: Dockerfile
dots/: hyprland.conf
hosts/: droid.nix  mahmooz0.nix
iso/: flake.nix  run.sh
lib/: constants.nix  desktop-vars.nix  server-vars.nix  utils.nix
modules/: machine-options.nix  uv_python.nix
pkgs/: autogen-agentchat.nix  autogen-core.nix  autogen-ext.nix  yt-dlp.nix
profiles/: arion-open-notebook.nix  base.nix  desktop-base.nix  desktop-linux.nix  desktop.nix  determinate.nix  emacs.nix  home.nix  machine-config.nix  network-local.nix  network.nix  niri.nix  nvidia.nix  sbcl.nix  server-linux.nix  server.nix  vm.nix
python-envs/transformers-mps/: README.md  pyproject.toml
services/: jellyfin.nix  llm.nix  mpv-daemon.nix  nixarr.nix  podman-autobuilder.nix  trackify.nix
(+36 files in other folders)
